# glpp

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
include/glpp/: glpp.hpp
src/: GLDebug.cpp  GLDebug.h  ShaderDescription.h  ShaderKind.h  ShaderModule.cpp  ShaderModule.h  UniqueBuffer.cpp  UniqueBuffer.h  UniqueShader.cpp  UniqueShader.h  UniqueShaderModule.cpp  UniqueShaderModule.h  UniqueVAO.cpp  UniqueVAO.h  check_errors.cpp  check_errors.h
src/glpp/: MaybeError.h  check_errors.cpp  check_errors.h  raw.h
src/glpp/Enums/: Channels.h  InternalFormat.h  Interpolation.h  ShaderType.h  TexelDataType.h  TextureKind.h  Wrap.h
src/glpp/Functions/: Framebuffer.cpp  Framebuffer.h  Miscellaneous.cpp  Miscellaneous.h  Program.cpp  Program.h  Shader.h  Shader.tpp  Texture.cpp  Texture.h  Texture.tpp  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
src/glpp/Objects/: Program.cpp  Program.h  Shader.h  Shader.tpp  ShaderDescription.h  ShaderModule.cpp  ShaderModule.h  Texture.cpp  Texture.h
src/glpp/UniqueHandles/: UniqueBuffer.h  UniqueFramebuffer.h  UniqueProgram.h  UniqueRenderBuffer.h  UniqueShader.h  UniqueShaderModule.h  UniqueTexture.h  UniqueTextureSampler.h  UniqueVAO.h  UniqueVertexArray.h
src/glpp/internal/: UniqueHandle.h  assert_is_bound.cpp  assert_is_bound.h  get_info_log.h
